# echotherm_v4l2loopback

./: .gitignore  CMakeLists.txt  README.md  config.json  echotherm_v4l2loopback.service  echotherm_v4l2loopback_config.json  install.sh  seekcamera_capture.service  seekcamera_capture_autostart.sh  seekcamera_capture_config.json  uninstall.sh
driver/udev/: 10-seekthermal.rules
lib/aarch64-linux-gnu/: libseekcamera.so.4.4
src/: EchoThermCamera.cpp  EchoThermCamera.h  EchoThermCameraLoopHandler.cpp  EchoThermCameraLoopHandler.h  SeekCamera.cpp  SeekCamera.h  SeekCameraLoopHandler.cpp  SeekCameraLoopHandler.h  main.cpp  seekcamera_capture.cpp
